tests/compile_fail/error_missing_status.rs
use acube::prelude::*;

#[derive(AcubeError, Debug)]
pub enum BadError {
    #[acube(message = "Something went wrong")]
    MissingStatus,
}

fn main() {}
