tests/compile_fail/error_missing_status.stderr
error: AcubeError variant `MissingStatus` requires #[acube(status = NNN)]
 --> $WORKSPACE/tests/compile_fail/error_missing_status.rs
  |
  |     MissingStatus,
  |     ^^^^^^^^^^^^^
